feature: add/remove save

--- a/src/app.html
+++ b/src/app.html
@@ -4,14 +4,13 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet" />
+    <link
+      href="https://fonts.cdnfonts.com/css/two-weekends-sans"
+      rel="stylesheet"
+    />
     <style>
       :root {
-        font-family: 'Roboto', sans-serif;
-        font-family: 'Roboto Thin', sans-serif;
-        font-family: 'Roboto Light', sans-serif;
-        font-family: 'Roboto Medium', sans-serif;
-        font-family: 'Roboto Black', sans-serif;
+        font-family: 'Two Weekends Sans', sans-serif;
       }
     </style>
     %sveltekit.head%
