add action's buttons for time block

--- a/src/app.html
+++ b/src/app.html
@@ -4,13 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      href="https://fonts.cdnfonts.com/css/two-weekends-sans"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.cdnfonts.com/css/k2d" rel="stylesheet" />
     <style>
       :root {
-        font-family: 'Two Weekends Sans', sans-serif;
+        font-family: 'K2D', sans-serif;
       }
     </style>
     %sveltekit.head%
