--- a/src/app.html
+++ b/src/app.html
@@ -5,9 +5,17 @@
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.cdnfonts.com/css/k2d" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Dongle:300,400,500,600,700"
+    />
     <style>
       :root {
-        font-family: 'K2D', sans-serif;
+        font-family: Roboto, Dongle;
       }
     </style>
     %sveltekit.head%
