--- a/src/app.html
+++ b/src/app.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
+    <title>Timeline éditable</title>
+    <meta name="description" content="Editer facilement une timeline" />
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
