--- a/src/app.html
+++ b/src/app.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/roboto.css" />
+    <link rel="stylesheet" href="%sveltekit.assets%/roboto.css" />
     %sveltekit.head%
   </head>
   <body>
-    <div>%sveltekit.body%</div>
+    <div style="display: contents">%sveltekit.body%</div>
   </body>
 </html>
