Add small click effect

--- a/src/app.html
+++ b/src/app.html
@@ -11,5 +11,20 @@
   </head>
   <body>
     <div style="display: contents">%sveltekit.body%</div>
+    <style>
+      body {
+        margin: 0;
+      }
+
+      button {
+        cursor: pointer;
+      }
+      button:hover {
+        outline: 1px solid grey;
+      }
+      button:active {
+        opacity: 0.5;
+      }
+    </style>
   </body>
 </html>
